<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        style="@style/nameStyle" />

    <EditText
        android:id="@+id/nicknameEdit"
        style="@style/nameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nicknameHint"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/doneButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin"
        android:fontFamily="@font/roboto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doneButtonText" />

    <TextView
        android:id="@+id/nicknameText"
        style="@style/nameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/star_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        android:contentDescription="@string/yellow_star_image_desc"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:ignore="ImageContrastCheck" />

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/bio_text"
            style="@style/nameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="2"
            android:paddingStart="@dimen/scroll_text_padding"
            android:paddingEnd="@dimen/scroll_text_padding"
            android:text="@string/lorem_ipsum" />
    </ScrollView>
</LinearLayout>